kubernetes/apps/kopiur-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-kopia-ui
spec:
  hostnames: ["kopia-garage.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage-kopia-ui
          namespace: kopiur-system
          port: 51515
      matches:
        - path:
            type: PathPrefix
            value: /
